--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1875,3 +1875,12 @@
   volume={8},
   pages={1627-1643}
 }
+
+@article{fix:hal-00869726,
+  TITLE = {{Template based black-box optimization of dynamic neural fields}},
+  AUTHOR = {Fix, J{\'e}r{\'e}my},
+  JOURNAL = {{Neural Networks}},
+  VOLUME = {46},
+  PAGES = {40-49},
+  YEAR = {2013}
+}
